# persona-guardian

./: COMPLETE_IMPLEMENTATION_GUIDE.md  END_TO_END_REPORT.md  EXECUTABLE_STEPS.md  EXECUTION_SUMMARY.md  GETTING_STARTED.md  HOW_TO_USE_VECTORS.md  INDEX.md  QUICK_REFERENCE.md  QUICK_TEST_GUIDE.md  README.md  VERIFY_END_TO_END.py  analyze_demo.py  demo_features.py  example_features.py  pyproject.toml  run_all_features.py  run_test.py  run_web_apps.py  sample_dataset_demo.jsonl  score_demo.py  setup_web.bat  setup_web.sh  smoke_test_web.py  steer_demo.py  verify_executable.py
persona_vectors/Qwen_Qwen2.5-1.5B-Instruct/: sycophancy.pt
src/persona_guardian/: analyzer.py  cli.py  core.py  scanner.py
tests/: __init__.py  test_core.py
traits/: sycophancy.yaml
web/: README.md  __init__.py  _utils.py  fastapi_app.py  gradio_app.py
