[tool.poetry]
name = "persona-guardian"
version = "0.1.0"
description = "Persona-vector-based toolkit to detect and mitigate sycophancy and hallucination traits in LLM fine-tunes."
authors = ["afasim <your@email.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "persona_guardian", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
transformers = "^4.45.0"
torch = "^2.3.0"
accelerate = "^0.33.0"
typer = "^0.12.0"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
persona-guardian = "persona_guardian.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
